syntax = "proto3";
option csharp_namespace = "Web.Api.IntegrationTests.Grpc";
package Web.Api.IntegrationTests.Grpc;
message AccessToken {
    string token = 1;
    int32 expiresIn = 2;
}